@@ -1,5 +1,10 @@
 2006-04-15  Iain <iain@gnome.org>
 
+	* src/PlayerWindow.cs: Merge patch from Jason Quigley to turn on
+	subscriber only stations.
+
+2006-04-15  Iain <iain@gnome.org>
+
 	* src/FMConnection.cs: Add ability to search for fans...
 
 	* src/FindStation.cs: Add a fans of radio.
